--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,17 @@ environment:
   sdk: ^3.6.0-114.0.dev
 
 dependencies:
+  firebase_core: ^2.18.0
+  firebase_storage: ^11.0.0
+  firebase_auth: ^4.0.0
+  image_picker: ^1.0.0
   flutter:
     sdk: flutter
   http: ^1.3.0
   async: ^2.11.0
   path: ^1.9.0
+
+  go_router: ^13.0.0
 
 dev_dependencies:
   flutter_test:
