--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   firebase_core: ^2.18.0
   firebase_storage: ^11.0.0
   firebase_auth: ^4.0.0
+  firebase_app_check: ^0.2.0
   image_picker: ^1.0.0
   flutter:
     sdk: flutter
